z-index fix for alert message

--- a/front/src/components/AlertMessage/AlertMessage.css
+++ b/front/src/components/AlertMessage/AlertMessage.css
@@ -3,6 +3,7 @@
   position: fixed;
   justify-content: center;
   align-items: center;
+  z-index: 1;
   top: 7.5%;
   padding: 1%;
   height: 6%;
